syntax = "proto3";

package buffdb.kv;
import 'google/protobuf/any.proto';
import 'google/protobuf/wrappers.proto';

// The service definition for key-value operations.
service Kv {
  // Get a value for a given key.
  rpc Get(stream GetRequest) returns (stream GetResponse);

  // Set a value for a given key. If the key already exists, the value is updated.
  //
  // Returns the key for validation.
  rpc Set(stream SetRequest) returns (stream SetResponse);

  // Delete a value for a given key.
  //
  // Returns the key for validation.
  rpc Delete(stream DeleteRequest) returns (stream DeleteResponse);

  // Determine if all provided keys have the same value.
  //
  // As the keys are streamed, the server returns `false` as soon as it finds two keys with
  // different values. If all keys have the same value, the server returns `true` when the stream
  // ends.
  //
  // Returns `false` if any key is not found.
  rpc Eq(stream EqRequest) returns (google.protobuf.BoolValue);

  // Determine if all provided keys have different values.
  //
  // As the keys are streamed, the server returns `false` as soon as it finds two keys with
  // identical values. If all keys have different values, the server returns `true` when the stream
  // ends.
  //
  // Returns `false` if any key is not found.
  rpc NotEq(stream NotEqRequest) returns (google.protobuf.BoolValue);
}

// A request to get a value for a given key.
message GetRequest {
  // The key half of a key-value pair.
  string key = 1;
}

// A response containing a value for a given key.
message GetResponse {
  // The value half of a key-value pair.
  string value = 1;
}

// A request to set a value for a given key. Updates the value if the key already exists.
message SetRequest {
  // The key half of a key-value pair.
  string key = 1;
  // The value half of the pair, associated with a specific key. Values are not necessarily unique.
  string value = 2;
}

// A response containing the key for a given key-value pair.
message SetResponse {
  // The key half of a key-value pair.
  string key = 1;
}

// A request to delete a value for a given key.
message DeleteRequest {
  // The key half of a key-value pair.
  string key = 1;
}

// A response containing the key for a given key-value pair.
message DeleteResponse {
  // The key half of a key-value pair.
  string key = 1;
}

// A request to determine if all provided keys have the same value.
message EqRequest {
  // The key half of a key-value pair.
  string key = 1;
}

// A request to determine if all provided keys have unique values.
message NotEqRequest {
  // The key half of a key-value pair.
  string key = 1;
}
